Password fields (e.g. in Bitwarden, LastPass, DashLane add-ons) have an extra/unexpected solid black border around password input fields, despite suppressing border via CSS
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox125 | --- | unaffected |
| firefox126 | --- | unaffected |
| firefox127 | --- | fixed |
People
(Reporter: dholbert, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(6 files)
STR:
- Install Bitwarden Password Manager from https://addons.mozilla.org/en-US/firefox/addon/bitwarden-password-manager/
- When the login sidebar appears, type in any email address (e.g.
test@example.org) and click Continue - Look at the password field
ACTUAL RESULTS:
There's an unexpected/redundant-looking black border inside the input field.
EXPECTED RESULTS:
No such black border.
See attached screenshot. Left side shows expected-results in current Firefox release. Right side shows actual-results in current Nightly 127.0a1 (2024-05-07)
| Reporter | ||
Comment 1•2 years ago
|
||
Regression range: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=e86e777fced482506de767727a313be25003c673&tochange=74da0b0c92b47e1b3fab56d6c3c8a134df9f2d6b
--> Regressed by bug 1750072
| Reporter | ||
Comment 2•2 years ago
•
|
||
Looking in Browser Toolbox, it looks like the textfield in question has:
appearance: auto;
...from a UA stylsheet, and that's part of what's making it draw the border -- if I set appearance:none or appearance:textfield, then the border goes away.
I see a similar issue on LastPass as well, installed from https://addons.mozilla.org/en-US/firefox/addon/lastpass-password-manager/ - there's now a black border around the password field on the initial login screen for that add-on, which looks broken because the "Master Password" filler-text gets lifted up to overlap that unexpected-border when the field gains focus.
| Reporter | ||
Comment 3•2 years ago
|
||
emilio: given that we're in the last week of a nightly cycle, should we backout bug 1750072 for now, or is there an easy fix we can land here?
| Reporter | ||
Updated•2 years ago
|
| Reporter | ||
Comment 4•2 years ago
|
||
| Reporter | ||
Comment 5•2 years ago
|
||
| Reporter | ||
Comment 6•2 years ago
•
|
||
This affects Dashlane as well (another popular password manager); see screenshot of their add-on's first-run account-setup flow (entering test@example.org when prompted for an email address).
| Reporter | ||
Updated•2 years ago
|
| Reporter | ||
Comment 7•2 years ago
|
||
This affects the dashlane website at https://app.dashlane.com/#/signup , too; it's not extension-specific.
| Reporter | ||
Comment 8•2 years ago
|
||
| Reporter | ||
Comment 9•2 years ago
|
||
Firefox Nightly draws a border around all of the password fields in testcase 1, as of this regression. Chrome, WebKit, and Firefox release do not.
| Reporter | ||
Updated•2 years ago
|
| Assignee | ||
Comment 11•2 years ago
|
||
Comment 12•2 years ago
|
||
Comment 14•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Description
•