Bug 1895561 - Password appearance should be suppressed by author borders / backgrounds, just like textfield is. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D209753